Refactoring of file location + minor nits